# food_svinki

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
locales/: __init__.py  ru.py
src/application/: application.py  bot.py
src/handlers/: __init__.py  get_recipes.py  post_recipe.py  start.py
src/keyboards/: all_keyboards.py
src/utils/: config.py  recipes_cache.py  utils.py
