[project]
name = "food-recipe"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav Serdyukov",email = "serdyukov@tl.protei.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
